# ompi

./: VERSION  autogen.pl
config/: opal_config_files.m4
ompi/communicator/: comm_cid.c  communicator.h
ompi/datatype/: ompi_datatype.h  ompi_datatype_create.c  ompi_datatype_create_struct.c  ompi_datatype_create_vector.c
ompi/mca/coll/base/: coll_base_allgather.c  coll_base_allgatherv.c  coll_base_allreduce.c  coll_base_alltoall.c  coll_base_functions.h  coll_base_reduce.c
ompi/mca/coll/han/: coll_han.h  coll_han_component.c  coll_han_dynamic.c  coll_han_gatherv.c  coll_han_scatterv.c  coll_han_subcomms.c  coll_han_utils.c
ompi/mca/coll/tuned/: coll_tuned.h  coll_tuned_allgather_decision.c  coll_tuned_decision_fixed.c  coll_tuned_module.c  coll_tuned_reduce_decision.c
ompi/mca/pml/base/: pml_base_frame.c  pml_base_request.c  pml_base_request.h  pml_base_select.c
ompi/mca/pml/cm/: pml_cm.c
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1.h  pml_ob1_component.c  pml_ob1_recvreq.h  pml_ob1_sendreq.h
ompi/mca/pml/topo/: Makefile.am  pml_topo.c  pml_topo.h  pml_topo_component.c  pml_topo_component.h  post_configure.sh
opal/datatype/: opal_datatype.h  opal_datatype_create.c
opal/mca/common/ofi/: common_ofi.c
opal/mca/json/: Makefile.am  json.h
opal/mca/json/base/: Makefile.am  bash.h  json_base_frame.c  json_base_select.c
opal/mca/json/builtin/: Makefile.am  json_builtin.h  json_builtin_component.c
opal/util/json/: Makefile.am
test/util/: opal_json.c
