#
# Copyright (c)           Amazon.com, Inc. or its affiliates.
#                         All Rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

dist_opaldata_DATA = base/help-json-base.txt

headers += \
	base/base.h

libmca_json_la_SOURCES += \
	base/json_base_frame.c \
	base/json_base_select.c
